fix wrong color in select

--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,7 @@ body {
 	background-color: white;
 }
 .css-1q8tt2r-MuiFormLabel-root-MuiInputLabel-root.Mui-focused {
-	background-color: #c8c7c7 !important;
+	color: #8e88bb !important;
 }
 .css-1blc7dc-MuiInputBase-root-MuiInput-root:after {
 	border-bottom: #ffdd0e 2px solid !important;
